[package]
name = "citizenchain"  # 运行时状态模块
description = "CitizenChain runtime built with Substrate."
homepage.workspace = true
publish = false
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false }
hex-literal = "0.4"
primitives = { path = "primitives", default-features = false } # 引用统一常量

# frame
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { features = ["experimental"], workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { optional = true, workspace = true }

# frame pallets
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }

# primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-session = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { features = ["serde"], workspace = true }

# RPC related
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { optional = true, workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }

shengbank-stake-interest = { path = "issuance/shengbank-stake-interest", default-features = false }
fullnode-pow-reward = { path = "issuance/fullnode-pow-reward", default-features = false }
citizen-lightnode-issuance = { path = "issuance/citizen-lightnode-issuance", default-features = false }
sfid-code-auth = { path = "otherpallet/sfid-code-auth", default-features = false }
pow-difficulty-module = { path = "otherpallet/pow-difficulty-module", default-features = false }
onchain-transaction-pow = { path = "transaction/onchain-transaction-pow", default-features = false }
duoqian-manage-pow = { path = "transaction/duoqian-manage-pow", default-features = false }
resolution-issuance-iss = { path = "issuance/resolution-issuance-iss", default-features = false }
resolution-issuance-gov = { path = "governance/resolution-issuance-gov", default-features = false }
voting-engine-system = { path = "governance/voting-engine-system", default-features = false }
admins-origin-gov = { path = "governance/admins-origin-gov", default-features = false }
grandpa-key-gov = { path = "governance/grandpa-key-gov", default-features = false }
runtime-root-upgrade = { path = "governance/runtime-root-upgrade", default-features = false }
resolution-destro-gov = { path = "governance/resolution-destro-gov", default-features = false }
duoqian-transfer-pow = { path = "transaction/duoqian-transfer-pow", default-features = false }
institution-asset-guard = { path = "transaction/institution-asset-guard", default-features = false }
offchain-transaction-pos = { path = "transaction/offchain-transaction-pos", default-features = false }
genesis-pallet = { path = "genesis", default-features = false }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"shengbank-stake-interest/std",
	"fullnode-pow-reward/std",
	"citizen-lightnode-issuance/std",
	"sfid-code-auth/std",
	"pow-difficulty-module/std",
	"onchain-transaction-pow/std",
	"duoqian-manage-pow/std",
	"resolution-issuance-iss/std",
	"resolution-issuance-gov/std",
	"voting-engine-system/std",
	"admins-origin-gov/std",
	"grandpa-key-gov/std",
	"runtime-root-upgrade/std",
	"resolution-destro-gov/std",
	"duoqian-transfer-pow/std",
	"institution-asset-guard/std",
	"offchain-transaction-pos/std",
	"genesis-pallet/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"serde_json/std",
	"hex/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-pow/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"shengbank-stake-interest/runtime-benchmarks",
	"fullnode-pow-reward/runtime-benchmarks",
	"citizen-lightnode-issuance/runtime-benchmarks",
	"sfid-code-auth/runtime-benchmarks",
	"pow-difficulty-module/runtime-benchmarks",
	"onchain-transaction-pow/runtime-benchmarks",
	"duoqian-manage-pow/runtime-benchmarks",
	"resolution-issuance-iss/runtime-benchmarks",
	"resolution-issuance-gov/runtime-benchmarks",
	"voting-engine-system/runtime-benchmarks",
	"admins-origin-gov/runtime-benchmarks",
	"grandpa-key-gov/runtime-benchmarks",
	"runtime-root-upgrade/runtime-benchmarks",
	"resolution-destro-gov/runtime-benchmarks",
	"duoqian-transfer-pow/runtime-benchmarks",
	"institution-asset-guard/std",
	"offchain-transaction-pos/runtime-benchmarks",
	"genesis-pallet/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"shengbank-stake-interest/try-runtime",
	"fullnode-pow-reward/try-runtime",
	"citizen-lightnode-issuance/try-runtime",
	"sfid-code-auth/try-runtime",
	"pow-difficulty-module/try-runtime",
	"onchain-transaction-pow/try-runtime",
	"duoqian-manage-pow/try-runtime",
	"resolution-issuance-iss/try-runtime",
	"resolution-issuance-gov/try-runtime",
	"voting-engine-system/try-runtime",
	"admins-origin-gov/try-runtime",
	"grandpa-key-gov/try-runtime",
	"runtime-root-upgrade/try-runtime",
	"resolution-destro-gov/try-runtime",
	"duoqian-transfer-pow/try-runtime",
	"institution-asset-guard/std",
	"offchain-transaction-pos/try-runtime",
	"genesis-pallet/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]


[dev-dependencies]
ed25519-dalek = "2.2.0"
