[package]
name = "cpms-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
schnorrkel = "0.11"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
