[package]
name = "pallet-sheng-stake-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
]

[package]
name = "sheng_stake_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "4.0.0-dev" }
sp-std = { version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std"
]