[package]
name = "shengbank-interest-distribution"
version = "0.1.0"
edition = "2021"
description = "Shengbank interest calculation and distribution pallet"

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-runtime    = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
]