[package]
name = "sfid-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

[workspace]
