[package]
name = "sfid-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
parity-scale-codec = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
schnorrkel = "0.11"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
zeroize = "1"
blind-rsa-signatures = "0.17"
rsa = { version = "0.10.0-rc", features = ["pkcs5"] }
sha2 = "0.10"
libc = "0.2"
subxt = { version = "0.43.1", default-features = false, features = ["jsonrpsee", "native"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
twox-hash = "1"
sp-core = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = true }

[workspace]
