[package]
name = "sfid-backend"
version = "0.1.0"
edition = "2021"

# 中文注释:SFID 后端源码已平铺到 backend 根目录,不再使用 Cargo 默认的 src/main.rs。
[[bin]]
name = "sfid-backend"
path = "main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
parity-scale-codec = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
schnorrkel = "0.11"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
zeroize = "1"
blind-rsa-signatures = "0.17"
rsa = { version = "0.10.0-rc", features = ["pkcs5"] }
sha2 = "0.10"
libc = "0.2"
subxt = { version = "0.43.1", default-features = false, features = ["jsonrpsee", "native"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
twox-hash = "1"
sp-core = { git = "https://github.com/ChinaNation/polkadot-sdk.git", branch = "ss58-2027-fix", default-features = true }
aes-gcm = "0.10"
hkdf = "0.12"
base64 = "0.22"
getrandom = "0.2"
dashmap = "6.1"
async-trait = "0.1"

[workspace]
