# 生成无私钥不可签名的永久质押地址工具；

[package]
name = "keyless"  # 无私钥地址生成工具
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

[dependencies]
blake2 = "0.10"
hex = "0.4"

[workspace]

# cargo run --manifest-path tools/keyless/Cargo.toml