[package]
name = "scripts"
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

[dependencies]
primitives = { path = "../../primitives" }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sp-core = { workspace = true, default-features = true }
