[workspace]

[package]
name = "smoldot_ffi"
version = "0.1.0"
edition = "2021"
authors = ["Polkadart Contributors"]
license = "Apache-2.0"
description = "FFI bindings for smoldot-light"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "smoldot"

[dependencies]
# 中文注释：固定引用仓库内收编的 PoW 轻节点快照，禁止再回指根目录临时 smoldot。
smoldot-light = { path = "../third_party/smoldot-pow/light-base" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
blake2-rfc = "0.2"
hex = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Abort on panic (smaller binary)

[profile.dev]
opt-level = 1          # Faster compilation in dev

[build-dependencies]
cbindgen = "0.27"
