[package]
name = "chain-signing"
description = "CitizenChain Rust host-side extrinsic signing material."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
citizenchain = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
frame-metadata-hash-extension = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
hex = "0.4"
pallet-transaction-payment = { workspace = true, default-features = true }
sha2 = "0.10"
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

