[package]
name = "qr-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true

[lints]
workspace = true
