[package]
name = "admins-origin-gov"  # 管理员权限治理模块
edition.workspace = true   # 默认 Rust 版本
version.workspace = true   # 版本号
authors.workspace = true   # 作者
repository.workspace = true  #项目仓库
license = "MIT"        # 授权协议 MIT

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

primitives = { path = "../../../primitives", default-features = false }
voting-engine-system = { path = "../voting-engine-system", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "primitives/std",
    "voting-engine-system/std",
]
