[package]
name = "finality-key-gov"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license = "MIT"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-consensus-grandpa = { workspace = true }
pallet-grandpa = { workspace = true }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"] }

primitives = { path = "../../../primitives", default-features = false }
voting-engine-system = { path = "../voting-engine-system", default-features = false }

[features]
default = ["std"]
try-runtime = []
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-consensus-grandpa/std",
    "pallet-grandpa/std",
    "primitives/std",
    "voting-engine-system/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
